--- a/Project4/Views/PhamNhans/Edit.cshtml
+++ b/Project4/Views/PhamNhans/Edit.cshtml
@@ -60,7 +60,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GioiTinh, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GioiTinh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.GioiTinh, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -76,7 +76,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ToiDanh, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ToiDanh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ToiDanh, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ToiDanh, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MucDoNguyHiem, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MucDoNguyHiem, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.MucDoNguyHiem, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MucDoNguyHiem, "", new { @class = "text-danger" })
             </div>
         </div>
