--- a/Project4/Views/Shared/_LayoutMain.cshtml
+++ b/Project4/Views/Shared/_LayoutMain.cshtml
@@ -35,7 +35,7 @@
                    aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Thông tin tài khoản</a>
-                    <a class="dropdown-item" href="#">Đăng xuất</a>
+                    <a class="dropdown-item" href="@Url.Action("LogOffCustom", "Account")">Đăng xuất</a>
                 </div> 
             </li>
         </ul>
