--- a/Project4/Views/ThamGuis/_ThamGuisSearchBar.cshtml
+++ b/Project4/Views/ThamGuis/_ThamGuisSearchBar.cshtml
@@ -12,7 +12,7 @@
                 @Html.DropDownList("phongID", new SelectList(ViewBag.Phong, "ID", "TenPhong"), new { @class = "form-control", @id = "txtPhong" })
             </div>
             <div class="col-md-1">
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-primary" onclick="TimKiem()">
                     <i class="fa fa-search"></i>
                 </button>
             </div>
