--- a/Project4/Views/QuanNgucs/_QuanNgucsDataTable.cshtml
+++ b/Project4/Views/QuanNgucs/_QuanNgucsDataTable.cshtml
@@ -37,43 +37,56 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TenQuanNguc)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NgaySinh)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.QueQuan)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GioiTinh)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.KhuID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NamCongTac)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ThoiHanCongTac)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CMND)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ChucVu)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.QuanHam)
-                </td>
-                <td>
-                    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
-                </td>
-            </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.TenQuanNguc)
+        </td>
+        <td>
+            @if (String.IsNullOrEmpty(item.AnhNhanDien))
+            {
+                <img src="~/Common/Image/no-image-icon-23485.png" class="img-fluid" alt="Image" width="200" height="300" />
+            }
+            else
+            {
+                <img src="@Url.Content(item.AnhNhanDien)" class="img-fluid" alt="Image" width="200" height="300" />
+            }
+        </td>
+        <td>
+            @if (item.NgaySinh.HasValue)
+            {
+                <p>@item.NgaySinh.Value.ToString("dd/MM/yyyy")</p>
+            }
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.QueQuan)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.GioiTinh)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.KhuID)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NamCongTac)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ThoiHanCongTac)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CMND)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ChucVu)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.QuanHam)
+        </td>
+        <td>
+            @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
+            @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
+        </td>
+    </tr>
         }
 
     </table>
