--- a/Project4/Views/QuanNgucs/_QuanNgucsSearchBar.cshtml
+++ b/Project4/Views/QuanNgucs/_QuanNgucsSearchBar.cshtml
@@ -13,7 +13,7 @@
                 <input type="text" class="form-control" placeholder="Tìm kiếm">
             </div>
             <div class="col-md-2">
-                @Html.DropDownList("txtKhu", new SelectList(ViewBag.Khu, "ID", "TenKhu"),"-- Khu --", new { @class = "form-control" })
+                @Html.DropDownList("txtKhu", new SelectList(ViewBag.Khu, "ID", "TenKhu"), new { @class = "form-control" })
             </div> 
             <div class="col-md-1">
                 <button class="btn btn-primary" onclick="TimKiem()" >
