--- a/Project4/Views/ThamGuis/_ThamGuisSearchBar.cshtml
+++ b/Project4/Views/ThamGuis/_ThamGuisSearchBar.cshtml
@@ -6,10 +6,10 @@
                 <input type="text" class="form-control" placeholder="Tìm kiếm">
             </div>
             <div class="col-md-2">
-                @Html.DropDownList("khuID", new SelectList(ViewBag.Khu, "ID", "TenKhu", ViewBag.SelectedKhu), "-- Khu --", new { @class = "form-control", @id = "txtKhu", @onchange = "LoadLaiThanhTK()" })
+                @Html.DropDownList("khuID", new SelectList(ViewBag.Khu, "ID", "TenKhu", ViewBag.SelectedKhu), new { @class = "form-control", @id = "txtKhu", @onchange = "LoadLaiThanhTK()" })
             </div> 
             <div class="col-md-2">
-                @Html.DropDownList("phongID", new SelectList(ViewBag.Phong, "ID", "TenPhong"), "-- Phòng --", new { @class = "form-control", @id = "txtPhong" })
+                @Html.DropDownList("phongID", new SelectList(ViewBag.Phong, "ID", "TenPhong"), new { @class = "form-control", @id = "txtPhong" })
             </div>
             <div class="col-md-1">
                 <button class="btn btn-primary" onclick="TimKiem()">
