--- a/Project4/Views/CheDoNghiPhepCuaQuanNgucs/Create.cshtml
+++ b/Project4/Views/CheDoNghiPhepCuaQuanNgucs/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.QuanNgucID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.QuanNgucID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.QuanNgucID, null, new { @class = "form-control", @id = "quanNgucNghi", @onchange = "TimQuanNguc()" })
                 @Html.ValidationMessageFor(model => model.QuanNgucID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,7 +38,11 @@
                 @Html.ValidationMessageFor(model => model.LyDoNghi, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
+        Trong thời gian nghỉ phép, các phòng trong khu sẽ được đảm nhiệm bởi : 
+        <div id="quanNgucList">
+            @Html.Partial("_PhongDamNhiemBoi")
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -50,3 +54,14 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section scripts{
+    <script>
+        function TimQuanNguc() {
+            var quanNgucNghi = $("#quanNgucNghi").val();
+            var link = '@Url.Action("PhongDamNhiemBoi", "CheDoNghiPhepCuaQuanNgucs", new { @idQuanNguc = "-1" })';
+            link = link.replace("-1", quanNgucNghi);
+            $('#banGiao').load(link);
+        }
+    </script>    
+}
