--- a/Project4/Views/Shared/_LayoutMain.cshtml
+++ b/Project4/Views/Shared/_LayoutMain.cshtml
@@ -41,7 +41,7 @@
                     <a class="dropdown-item" href="#">Thông tin tài khoản</a>
 
                     <a class="dropdown-item" href="@Url.Action("LogOffCustom", "Account")">Đăng xuất</a>
-                </div> 
+                </div>
 
 
             </li>
@@ -54,12 +54,15 @@
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Thanh công cụ</div>
                         @*@Url.Action("Index", "Family")*@
-                        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts"
-                           aria-expanded="false" aria-controls="collapseLayouts">
-                            <div class="sb-nav-link-icon"><img src="~/Asserts/MasterPage1/img/icon/security1.png" /></div>
-                            <span style="color: cornsilk; font-size: 17px">Quản lí cán bộ </span>
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
+                        @if (User.IsInRole("QuanNgucTruong"))
+                        {
+                            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts"
+                               aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><img src="~/Asserts/MasterPage1/img/icon/security1.png" /></div>
+                                <span style="color: cornsilk; font-size: 17px">Quản lí cán bộ </span>
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                        }
                         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                              data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
@@ -110,7 +113,7 @@
                         </a>
                     </div>
                 </div>
-            </nav> 
+            </nav>
         </div>
         <div id="layoutSidenav_content">
             <main>
@@ -165,7 +168,7 @@
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous">
         </script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous">
-        </script>*@ 
+        </script>*@
     @*hihi123*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
