--- a/Project4/Views/AnXas/Index.cshtml
+++ b/Project4/Views/AnXas/Index.cshtml
@@ -6,7 +6,27 @@
     Layout = "~/Views/Shared/_LayoutMain.cshtml";
 }
 <h2>Quản lý chế độ ân xá</h2>
-<br /> @Html.Partial("_AnXaSearchBar")
+@using (Html.BeginForm("Index", "AnXas", FormMethod.Get)) 
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                @Html.TextBox("tenPhamNhan", "", null, new
+                {
+                    @class = "form-control",
+                    @placeholder = "Tìm kiếm theo tên quản ngục"
+                })
+            </div>
+            <div class="col-md-1">
+                <button class="btn btn-primary" type="submit" onclick="TimKiem()">
+                    <i class="fa fa-search"></i>
+                </button>
+            </div>
+            <div class="col-md-7">
+            </div>
+        </div>
+    </div>
+}
 <br /><p>@Html.ActionLink("Thêm mới", "Create")</p>
 <table class="table">
     <tr>
@@ -57,28 +77,29 @@
     <div style="font-size: x-large; padding: 20px">
         @Html.PagedListPager(Model, i => Url.Action("Index", "AnXas", new
            {
-               tenPhamNhan = Request.QueryString["tenPhamNhan"], i
-           })) 
+               tenPhamNhan = Request.QueryString["tenPhamNhan"],
+            i
+           }))
     </div>
 </p>
 
-@section scripts{
-    <script>
-        function LoadLaiThanhTK() {
-            var khuID = $("#txtKhu").val();
-            var link = '@Url.Action("ThanhTimKiem", "AnXas", new { khuID = "-1" })';
-            link = link.replace("-1", khuID);
-            $('#thanhTimKiem').load(link);
-        }
-        function TimKiem() {
-            var txtTenHoacMa = $("#txtTenHoacMa").text();
-            var txtKhu = $("#txtKhu").val();
-            var txtPhong = $("#txtPhong").val();
-            var link = '@Html.Raw(Url.Action("TimKiem", "AnXas", new { @txtTenHoacMa = "-1" , @khuID = "-2" , @phongID = "-3"  }))';
-            link = link.replace("-1", txtTenHoacMa);
-            link = link.replace("-2", txtKhu);
-            link = link.replace("-3", txtPhong);
-            $('#table').load(link);
-        }
-    </script>
-}
+@*@section scripts{
+        <script>
+            function LoadLaiThanhTK() {
+                var khuID = $("#txtKhu").val();
+                var link = '@Url.Action("ThanhTimKiem", "AnXas", new { khuID = "-1" })';
+                link = link.replace("-1", khuID);
+                $('#thanhTimKiem').load(link);
+            }
+            function TimKiem() {
+                var txtTenHoacMa = $("#txtTenHoacMa").text();
+                var txtKhu = $("#txtKhu").val();
+                var txtPhong = $("#txtPhong").val();
+                var link = '@Html.Raw(Url.Action("TimKiem", "AnXas", new { @txtTenHoacMa = "-1" , @khuID = "-2" , @phongID = "-3"  }))';
+                link = link.replace("-1", txtTenHoacMa);
+                link = link.replace("-2", txtKhu);
+                link = link.replace("-3", txtPhong);
+                $('#table').load(link);
+            }
+        </script>
+    }*@
