--- a/Project4/Views/PhamNhans/Index.cshtml
+++ b/Project4/Views/PhamNhans/Index.cshtml
@@ -77,14 +77,24 @@
                             @Html.DisplayFor(modelItem => item.BiDanh)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.AnhNhanDien)
-                        </td>
+                            @if (String.IsNullOrEmpty(item.AnhNhanDien))
+                            {
+                                <img src="~/Common/Image/no-image-icon-23485.png" class="img-fluid" alt="Image" width="200" height="300" />
+                            }
+                            else
+                            {
+                                <img src="@Url.Content(item.AnhNhanDien)" class="img-fluid" alt="Image" width="200" height="300" />
+                            }
+                        </td> 
                         <td>
                             @Html.DisplayFor(modelItem => item.QueQuan)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.NgaySinh)
-                        </td>
+                            @if (item.NgaySinh.HasValue)
+                            {
+                                <p>@item.NgaySinh.Value.ToString("dd/MM/yyyy")</p>
+                            }
+                        </td> 
                         <td>
                             @Enum.GetName(typeof(Project4.Common.CommonConstant.GioiTinh), item.GioiTinh)
                         </td>
@@ -138,8 +148,9 @@
     <p style="text-align:center">
         <div style="font-size: x-large; padding: 20px">
             @Html.PagedListPager(Model, i => Url.Action("Index", "PhamNhans", new
-            { 
-                  i, txtTenHoacMa = Request.QueryString["txtTenHoacMa"],
+            {
+                  i,
+                txtTenHoacMa = Request.QueryString["txtTenHoacMa"],
                   khuID = Request.QueryString["khuID"],
                   phongID = Request.QueryString["phongID"]
             }))
