--- a/Project4/Views/Benhs/_BenhDataTable.cshtml
+++ b/Project4/Views/Benhs/_BenhDataTable.cshtml
@@ -3,7 +3,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.TenBenh)
+            @Html.DisplayNameFor(model => model.PhamNhanID)
         </th>
         <th></th> 
     </tr>
@@ -12,7 +12,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.TenBenh)
+                @Html.DisplayFor(modelItem => item.PhamNhanID)
             </td>
             <td>
                 @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
