--- a/Project4/Views/Benhs/Create.cshtml
+++ b/Project4/Views/Benhs/Create.cshtml
@@ -16,13 +16,19 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.TenBenh, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Phạm nhân bị bệnh</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TenBenh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenBenh, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.PhamNhanID, null, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PhamNhanID, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="control-label col-md-2">Số ngày chữa trị</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NgayChuaTri, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PhamNhanID, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
