--- a/Project4/Views/PhamNhans/Create.cshtml
+++ b/Project4/Views/PhamNhans/Create.cshtml
@@ -83,13 +83,26 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.IDKhu, null, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+        @if (User.IsInRole("QuanNgucTruong"))
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.IDKhu, null, new  { @class = "form-control", @id = "txtKhu" , @onchange = "LoadLaiPhong()" } )
+                    @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.IDKhu, null, new { @class = "form-control", @id = "txtKhu", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
 
         <div class="form-group">
             @Html.LabelFor(model => model.ToiDanh, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -139,13 +152,10 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PhongGiamID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.PhongGiamID, null, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhongGiamID, "", new { @class = "text-danger" })
-            </div>
+        <div id="phong">
+            @Html.Partial("_PhongPartial")
         </div>
+        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -174,5 +184,13 @@
             });
 
         });
+        function LoadLaiPhong() {
+            var khuID = $("#txtKhu").val();
+            var link = '@Url.Action("LoadPhong", "PhamNhans", new { khuID = "-1" })';
+            link = link.replace("-1", khuID);
+            $('#phong').load(link);
+        }
     </script>
 }
+
+
