--- a/Project4/Views/PhamNhans/Edit.cshtml
+++ b/Project4/Views/PhamNhans/Edit.cshtml
@@ -13,10 +13,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
 <h2>Edit</h2>
-
 @using (Html.BeginForm("Edit", "PhamNhans", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
+    <input type="text" hidden value="@ViewBag.PhongDangChuaPhamNhan" id="phongDangChuaPhamNhan" />
 
 <div class="form-horizontal">
     <h4>PhamNhan</h4>
@@ -25,6 +25,7 @@
     @Html.HiddenFor(model => model.ID)
     @Html.HiddenFor(model => model.AnhNhanDien)
     @*@Html.HiddenFor(model => model.NgaySinh)*@
+    
 
     <div class="form-group">
         @Html.LabelFor(model => model.TenPhamNhan, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -85,13 +86,27 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.IDKhu, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+    @if (User.IsInRole("QuanNgucTruong"))
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.IDKhu, null, new { @class = "form-control", @id = "txtKhu", @onchange = "LoadLaiPhong()" })
+                @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.IDKhu, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.IDKhu, null, new { @class = "form-control", @id = "txtKhu", @disabled = "disabled" })
+                @Html.ValidationMessageFor(model => model.IDKhu, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    }
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.ToiDanh, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -141,12 +156,8 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.PhongGiamID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PhongGiamID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PhongGiamID, "", new { @class = "text-danger" })
-        </div>
+    <div id="phong">
+        @Html.Partial("_PhongPartial")
     </div>
 
     <div class="form-group">
@@ -175,5 +186,13 @@
             });
 
         });
+        function LoadLaiPhong() {
+            var khuID = $("#txtKhu").val();
+            var phongDangChuaPhamNhan = $("#phongDangChuaPhamNhan").val();
+            var link = '@Html.Raw(Url.Action("LoadPhong", "PhamNhans", new { khuID = "-1", phongDangChuaPhamNhanID = "-2" }))';
+            link = link.replace("-1", khuID);
+            link = link.replace("-2", phongDangChuaPhamNhan);
+            $('#phong').load(link);
+        }
     </script>
 }
