--- a/Project4/Views/QuanNgucs/Edit.cshtml
+++ b/Project4/Views/QuanNgucs/Edit.cshtml
@@ -71,7 +71,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GioiTinh, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GioiTinh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.GioiTinh, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.KhuID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.KhuID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.KhuID, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KhuID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -111,7 +111,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChucVu, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ChucVu, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ChucVu, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ChucVu, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.QuanHam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.QuanHam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.QuanHam, null, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.QuanHam, "", new { @class = "text-danger" })
             </div>
         </div>
