--- a/Project4/Views/QuanNgucs/Delete.cshtml
+++ b/Project4/Views/QuanNgucs/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Quản ngục dừng công tác tại trại giam: </h3>
 <div>
     <h4>QuanNguc</h4>
     <hr />
@@ -98,6 +98,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
+            Trong thời gian chờ quản ngục khác thay thế, các phòng trong khu sẽ được đảm nhiệm bởi :
+            <div id="quanNgucList">
+                @Html.Partial("_PhongDamNhiemBoi")
+            </div>
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
